# tap-todoist

./: .gitignore  pyproject.toml
tap_todoist/: __init__.py  base_connector.py  catalog.py  tap.py  types.py
tests/: __init__.py
