[project]
name = "tap-todoist"
version = "0.1.0"
description = ""
authors = [{ name = "Edgar Ramírez Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "requests~=2.33.0",
    "singer-sdk~=0.53.5",
    "requests-cache~=1.2.1",
]

[project.scripts]
tap-todoist = "tap_todoist.tap:TapTodoist.cli"

[dependency-groups]
dev = ["types-requests>=2.32"]

[tool.hatch.build.targets.sdist]
include = ["tap_todoist"]

[tool.hatch.build.targets.wheel]
include = ["tap_todoist"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
